kubernetes/monitoring/prometheus/grafana-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.home.lab`)
      services:
        - name: monitoring-grafana
          port: 80
  tls:
    secretName: grafana-tls
